
    o   The readPDF() reader function can now be configured (via the
        PdfinfoOptions and PdftotextOptions arguments).

    o   The readDOC() reader function can now be configured (via the
        AntiwordOptions argument).

    o   Sources now can be vectorized. This allows faster corpus
        construction.

    o   New XMLSource class for arbitrary XML files.

    o   The new readCustom() reader function allows to create a
        tailor-made reader configured via mappings.

    o   The new readXML() reader function allows to read in arbitrary
        XML files which are described with a specification.

    o   The new tmReduce() transformation allows to combine multiple
        maps into one transformation.

DEPRECATED & DEFUNCT

    o   CSVSource is defunct (use DataframeSource instead).

    o   weightLogical is defunct.

    o   TermDocMatrix is defunct (use DocumentTermMatrix or
        TermDocumentMatrix instead).

                CHANGES IN tm VERSION 0.3-3

NEW FEATURES

    o   The abstract Source class gets a default implementation for
        the stepNext() method. It increments the position counter by
        one, a reasonable value for most sources. For special purposes
        custom methods can be created via overloading stepNext() of
        the subclass.

    o   New URISource class for a single document identified by a
        Uniform Resource Identifier.

    o   New DataframeSource for documents stored in a data frame. Each
        row is interpreted as a single document.

BUG FIXES

    o   Fix off-by-one error in convertMboxEml() function. Reported by
        Angela Bohn.

    o   Sort row indices in sparse term-document matrices. Kudos to
        Martin Mächler for his suggestions.

    o   Sources and readers no longer evaluate calls in a non-standard
        way.

                CHANGES IN tm VERSION 0.3-2

NEW FEATURES

    o	Weighting functions now have an Acronym slot containing