@@ -22,13 +22,13 @@ export(
        "materialize",
        "nDocs",
        "nTerms",
-       "readCustom",
        "readPlain",
        "readReut21578XML",
        "readRCV1",
        "readNewsgroup",
        "readGmane",
        "readPDF",
+       "readTabular",
        "readHTML",
        "readDOC",
        "readXML",
